基本流程实现

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -25,8 +25,8 @@
                     <artifactId>spring-data-redis</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-security</artifactId>
+                    <groupId>org.springframework.security.oauth</groupId>
+                    <artifactId>spring-security-oauth2</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
