--- a/gateway/src/main/resources/bootstrap-test.yml
+++ b/gateway/src/main/resources/bootstrap-test.yml
@@ -6,10 +6,10 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 47.99.194.189:8848
+        server-addr: nacosId:8848
         namespace: 043debab-6937-4d51-9c75-b410d1381959
       config:
-        server-addr: 47.99.194.189:8848
+        server-addr: nacosId:8848
         namespace: 043debab-6937-4d51-9c75-b410d1381959
         file-extension: yml
       # spring cloud gateway 路由配置方式
